# trm_llm

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  tools.json
configs/: ds_config.json
configs/ds_config/: README.md  zero2.json
data/: sample_system_prompt.txt  sample_tools.json  special_tokens.txt
docs/: architecture.md  archs.md
scripts/: inference.py  run_test.sh  test.py  train.py
trm_llm/: __init__.py
trm_llm/data/: __init__.py  collator.py  dataset.py  sp_tokenizer.py  tokenizer.py
trm_llm/evaluation/: __init__.py  tool_call_eval.py
trm_llm/inference/: __init__.py  generator.py
trm_llm/models/: __init__.py  action_module.py  output_heads.py  pretrained_loader.py  reasoning_module.py  transformer_blocks.py  trm_llm.py
trm_llm/training/: __init__.py  loss.py  trainer.py
trm_llm/utils/: __init__.py  config.py  logger.py
