[project]
name = "trm_llm"
version = "0.1.0"
description = "Tiny Recursive Model for LLM Tool Calling"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "accelerate>=1.0.1",
    "muon-optimizer",
    "structlog>=25.5.0",
    "sentencepiece>=0.1.99",
    "deepspeed>=0.18.3",
    "setuptools>=75.3.2",
    "gdown>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.uv.sources]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
